# quackserver

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  DEPLOY.md  DuckDB_AppServer_Spec.docx  LICENSE  README.md  pyproject.toml
docs/: duckdb-compaction.md  spec.md
quackserver/: __init__.py  __main__.py  config.py
quackserver/cli/: _duckdb_helpers.py  compact.py  inspect.py  rebuild.py  serve.py
quackserver/core/: checkpoint.py  commands.py  dedup.py  health.py  log.py  projection.py  read_store.py  replay.py  runtime.py  structured_log.py  worker.py
quackserver/http/: app.py  models.py  routes.py
quackserver/storage/: duckdb_impl.py  interface.py
tests/: conftest.py  test_app.py  test_chaos.py  test_checkpoint.py  test_commands.py  test_dedup.py  test_duckdb_projection.py  test_health.py  test_log.py  test_projection.py  test_rebuild.py  test_replay.py  test_replay_invariant.py  test_runtime.py  test_smoke.py  test_structured_log.py  test_worker.py
