[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "quackserver"
version = "0.1.0"
description = "Constrained DuckDB application server for solo developers"
requires-python = ">=3.11"
dependencies = [
    "duckdb>=1.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
]

[project.scripts]
quackserver = "quackserver.__main__:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["quackserver*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
